--- a/Home.html
+++ b/Home.html
@@ -40,7 +40,7 @@
           </div>
           <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px; color: aliceblue;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="ReportGenerator.html" style="padding: 10px 20px;">Generate</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Generate.html" style="padding: 10px 20px;">Generate</a>
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
@@ -48,7 +48,7 @@
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="ReportGenerator.html" style="padding: 10px 20px;">Generate</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Generate.html" style="padding: 10px 20px;">Generate</a>
 </li></ul>
               </div>
             </div>
@@ -82,7 +82,7 @@
           </div>
         </div>
         <h3 style="font-size: 25px;margin-top: 5px;" class="u-custom-font u-font-oswald u-text u-text-default u-text-palette-1-dark-1 u-text-2">Generate Your Report With A Click</h3>
-        <a href="ReportGenerator.html" style="font-size: 10px;" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">GO TO YOUR REPORT</a>
+        <a href="ReportGenerator.html" style="font-size: 10px;" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Click Here!</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-3365">
