--- a/Home.html
+++ b/Home.html
@@ -82,7 +82,7 @@
           </div>
         </div>
         <h3 style="font-size: 25px;margin-top: 5px;" class="u-custom-font u-font-oswald u-text u-text-default u-text-palette-1-dark-1 u-text-2">Generate Your Report With A Click</h3>
-        <a href="ReportGenerator.html" style="font-size: 10px;" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Click Here!</a>
+        <a href="Generate.html" style="font-size: 10px;" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-50 u-btn-1">Click Here!</a>
       </div>
     </section>
     <section class="u-clearfix u-palette-1-base u-section-2" id="sec-3365">
